--- a/vote.html
+++ b/vote.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Votación - Sistema de Encuestas</title>
+    <title>Sistema de Encuestas</title>
+    
+    <!-- ✅ Evitar error de favicon -->
+    <link rel="icon" href="data:,">
     
     <!-- Supabase JS Client -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
